fixing overflow

--- a/src/app/features/home/home.component.css
+++ b/src/app/features/home/home.component.css
@@ -2188,6 +2188,7 @@
   align-items: center;
   color: white;
   margin-top: -20px;
+  overflow:hidden;
 }
 
 .pricing-card:hover {
